--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       href="public/manifest.json"
       crossorigin="use-credentials"
     />
-    <title>React</title>
+    <title>React tags</title>
   </head>
   <body class="hold-transition skin-blue sidebar-mini">
     <noscript>You need to enable JavaScript to run this app.</noscript>
